--- a/notebooks/analyse.ipynb
+++ b/notebooks/analyse.ipynb
@@ -2769,7 +2769,7 @@
    "source": [
     "1. Random Forest performs slightly better than Gradient Boost with respect to Weighted Error Score and at the same time has a higher probability of maximum prediction error $\\leq$ 1. Moreover, it is conceptually simpler than Gradient Boost. Therefore, I consider it to be the superior model.\n",
     "\n",
-    "2. Decision Tree has the lowest Weighted Error Score for test set size = 1 and is the best performing non-trivial model in ensuring maxium prediction error $\\leq$ 1. However, as seen from the distributions of maximum error, it is the only model whose prediction can have an error of 3. It also has a significantly higher Weighted Error Score for largesr test set sizes. That is why I consider it to be the second superior model.\n",
+    "2. Decision Tree has the lowest Weighted Error Score for test set size = 1 and is the best performing non-trivial model in ensuring maxium prediction error $\\leq$ 1. However, as seen from the distributions of maximum error, it is the only model whose prediction can have an error of 3. It also has a higher Weighted Error Score for largesr test set sizes. That is why I consider it to be the second superior model.\n",
     "\n",
     "3. Among the linear models Ridge Regression and Huber Regression are superior for respectively large and small test sets."
    ]
@@ -3213,7 +3213,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "All coeffcients to the left from Abs Latitude have significantly lower values. Setting threshold to 0.1 we could decide to ignore variables: Makatea, Log Isolation, Individual Ownership, Log Elevation, Age, Dry, Dust, Elite Ownership."
+    "All coeffcients to the left from Abs Latitude have much lower values. Setting threshold to 0.1 we could decide to ignore variables: Makatea, Log Isolation, Individual Ownership, Log Elevation, Age, Dry, Dust, Elite Ownership."
    ]
   },
   {
@@ -5602,14 +5602,14 @@
     "\n",
     "## Comparison with previous works\n",
     "\n",
-    "Rollet & Diamond, 2004 found the following environmental predictors to be most significant (multivariate robust linear regression):\n",
+    "Rollet & Diamond, 2004 found the following environmental predictors to be significant (multivariate robust linear regression and stepwise variable selection):\n",
     "* Rainfall (negative)\n",
     "* Absolute Latitude (positive)\n",
     "* Tephra (negative)\n",
     "* Area (negative)\n",
     "* Isolation (positive)\n",
     "\n",
-    "Atkinson et al., 2016 found the following environmental and cultural predictors to be most significant (Phylogenetic Generalized Least-Squares + spatial analysis, averaging over all possible combinations of predictors based on Akaike Information Criterion):\n",
+    "Atkinson et al., 2016 found the following environmental and cultural predictors to be significant and most important (Phylogenetic Generalized Least-Squares + spatial analysis, averaging over all possible combinations of predictors based on Akaike Information Criterion):\n",
     "* Rainfall (negative)\n",
     "* Irrigation (positive)\n",
     "* Elevation (negative)\n",
